s/NewUserForm/UpdateUserForm/ and fix the user list table width

--- a/mango/users/templates/users/index.html
+++ b/mango/users/templates/users/index.html
@@ -36,8 +36,8 @@ $(document).ready(function() {
 {% block content %}
 {{ MEDIA_URL }}
 <hr>
-<div style="width: 100%; margin: auto;">
-<table id="usertable">
+<div style="width: 80%; margin: auto;">
+<table id="usertable" style="width: 100%;">
  <thead>
  <th>Username</th>
  <th>Full Name</th>
