--- a/mango/users/templates/users/update-user.html
+++ b/mango/users/templates/users/update-user.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+{% extends "users/user-base.html" %}
 {% block css %}
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/demo_page.css" type="text/css" media="screen">
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/demo_table_jui.css" type="text/css" media="screen">
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/jquery-ui.css" type="text/css" media="screen">
 {% endblock %}
+{% block breadcrumb %}{{ block.super }} &raquo; {{ user }}{% endblock %}
 {% block content %}
 This is the page for {{ user }} who is a member of: {{ groups|join:", " }}
 <hr>
