--- a/mango/templates/table-base.html
+++ b/mango/templates/table-base.html
@@ -1,4 +1,4 @@
-{% extends "users/user-base.html" %}
+{% extends "base.html" %}
 {% block css %}
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/demo_page.css" type="text/css" media="screen">
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/demo_table_jui.css" type="text/css" media="screen">
@@ -35,10 +35,10 @@ $(document).ready(function() {
 <div style="width: 80%; margin: auto;">
 <table id="usertable" style="width: 100%;">
  <thead>
- <th>Username</th>
- <th>Full Name</th>
- <th>Email</th>
+	{% block thead %}
+	{# Put the <th> elements in here #}
  </thead>
+	{% endblock %}
  <tbody>
 	{% block tbody %}
 	{# Put a <tr> here #}
