--- a/mango/templates/base.html
+++ b/mango/templates/base.html
@@ -4,6 +4,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>{% block title %}{% endblock %}</title>
   {% block css %}
+<link rel="stylesheet" type="text/css" media="all" href="http://www.gnome.org/wp-content/themes/gnome-grass/style.css" />
+<link rel="stylesheet" type="text/css" media="all" href="http://www.gnome.org/wp-content/themes/gnome-grass/css/home.css" />
+<link rel="stylesheet" type="text/css" media="all" href="http://www.gnome.org/wp-content/themes/gnome-grass/css/news.css" />
+<link rel="icon" type="image/png" href="http://www.gnome.org/img/logo/foot-16.png">
+<link rel="SHORTCUT ICON" type="image/png" href="http://www.gnome.org/img/logo/foot-16.png">
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/site.css" type="text/css" media="screen">
   {% endblock %}
   {% block javascript %}
@@ -11,14 +16,17 @@
   {% endblock %}
 </head>
 <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
-	{% block breadcrumb %}<a href="{% url index %}">Home</a>{% endblock %}
+	<!-- TODO: Put this in a stylesheet somewhere -->
+	<div id="breadcrumb" style="float: left; left: 10px; margin-top: 10px;">{% block breadcrumb %}<a href="{% url index %}">Home</a>{% endblock %}</div>
   <div id="body">
     {% block body %}
       <div class="content_title">
         {% block content_title %}{% endblock %}
       </div>
       <div class="content">
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% include "header-snippet.html" %}
+        {% endblock %}
       </div>
     {% endblock %}
   </div>
