--- a/mango/users/templates/users/update-user.html
+++ b/mango/users/templates/users/update-user.html
@@ -1,12 +1,6 @@
 {% extends "users/user-base.html" %}
-{% block css %}
-{{ block.super }}
-<!--
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/demo_page.css" type="text/css" media="screen">
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/demo_table_jui.css" type="text/css" media="screen">
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/jquery-ui.css" type="text/css" media="screen">
--->
-{% endblock %}
+{% load i18n %}
+{% block title %}GNOME Mango: {% trans "Update user:" %} {{ user.username }}{% endblock %}
 {% block breadcrumb %}{{ block.super }} &raquo; {{ user }}{% endblock %}
 {% block content %}
 {{ block.super }}
