Minor updates to the templates and datatable javascript

--- a/mango/templates/header-snippet.html
+++ b/mango/templates/header-snippet.html
@@ -20,7 +20,7 @@
     <li id="menu-item-1039" class="menu-item{% if current == "users" %} current-menu-item{% endif %}"><a href="{% url users-index %}">{% trans "Users" %}</a></li>
     <li id="menu-item-1037" class="menu-item{% if current == "requests" %} current-menu-item{% endif %}"><a href="#">{% trans "Account Requests" %}</a></li>
     <li id="menu-item-1040" class="menu-item{% if current == "modules" %} current-menu-item{% endif %}"><a href="#">{% trans "VCS Modules" %}</a></li>
-    <li id="menu-item-1038" class="menu-item{% if current == "mirrors" %} current-menu-item{% endif %}"><a href="#">{% trans "Mirrors" %}</a></li>
+    <li id="menu-item-1038" class="menu-item{% if current == "mirrors" %} current-menu-item{% endif %}"><a href="{% url mirrors-index %}">{% trans "Mirrors" %}</a></li>
     <li id="menu-item-1038" class="menu-item{% if current == "docs" %} current-menu-item{% endif %}"><a href="#">{% trans "Documentation" %}</a></li>
     <li id="menu-item-1038" class="menu-item"><a href="#">{% trans "Logout" %}</a></li>
    </ul>
