--- a/mango/mirrors/templates/mirrors/index.html
+++ b/mango/mirrors/templates/mirrors/index.html
@@ -1,19 +1,27 @@
 {% extends "table-base.html" %}
 {% load i18n %}
-{% block breadcrumb %}{{ block.super }} &raquo; <a href="{% url mirrors-index %}">Mirrors</a>{% endblock %}
+{% block document_ready_extra %}
+// Hide the "Active" column and sort on it
+dataTable.fnSetColumnVis(3, false );
+dataTable.fnSort( [ [3,'desc'] ] );
+{% endblock %}
+{% block breadcrumb %}{{ block.super }} &raquo; <a href="{% url mirrors-index %}">{% trans "Mirrors" %}</a>{% endblock %}
 {% block thead %}
- <th>Name</th>
- <th>Url</th>
- <th>Location</th>
- <th>Active</th>
+ <th>{% trans "Name" %}</th>
+ <th>{% trans "Url" %}</th>
+ <th>{% trans "Location" %}</th>
+ <th>{% trans "Active" %}</th>
+{% endblock %}
+{% block above_table %}
+<h2 class="center">{% trans "GNOME Mirror Network" %}</h2>
 {% endblock %}
 {% block tbody %}
   {% for mirror in mirrors %}
-  <tr{% if not mirror.is_active %} class="gradeX" title="Inactive mirror. Record last updated {{ mirror.last_update|date:"F d, Y: P" }}"{% endif %}>
-   <td{% if not mirror.is_active %} class="gradeX"{% endif %}>{{ mirror.name }}</td>
-   <td{% if not mirror.is_active %} class="gradeX"{% endif %}><a href="{{ mirror.url }}">{{ mirror.url }}</a></td>
-   <td{% if not mirror.is_active %} class="gradeX"{% endif %}>{{ mirror.location }}</td>
-   <td{% if not mirror.is_active %} class="gradeX"{% endif %}>{{ mirror.is_active }}</td>
+  <tr{% if not mirror.is_active %} class="gradeX" title="{{ mirror.name }} {% trans "is inactive" %} " }}"{% endif %}>
+   <td class="center">{{ mirror.name }}</td>
+   <td><a href="{{ mirror.url }}">{{ mirror.url }}</a></td>
+   <td>{{ mirror.location }}</td>
+   <td>{{ mirror.is_active }}</td>
   </tr>
   {% endfor %}
 {% endblock %}
