--- a/mango/templates/base.html
+++ b/mango/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
 	<!-- TODO: Put this in a stylesheet somewhere -->
-	<div id="breadcrumb" style="float: left; left: 10px; margin-top: 10px;">{% block breadcrumb %}<a href="{% url index %}">{% trans "Home" %}</a>{% endblock %}</div>
+	<div id="breadcrumb" style="float: left; left: 10px; margin-top: 10px;">{% block breadcrumb %}{% include "breadcrumb_snippet.html" %}{% endblock %}</div>
   <div id="body">
     {% block body %}
       <div class="content_title">
