--- a/mango/users/templates/users/update-user.html
+++ b/mango/users/templates/users/update-user.html
@@ -1,13 +1,24 @@
 {% extends "users/user-base.html" %}
 {% load i18n %}
+{% load uni_form_tags %}
+{% block javascript %}
+{{ block.super }}
+<script src="{{ MEDIA_URL }}js/uni-form.jquery.js" type="text/javascript"></script>
+{% endblock %}
+{% block css %}
+{{ block.super }}
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/uni-form.css" type="text/css" />
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/default.uni-form.css" type="text/css" />
+{% endblock %}
 {% block title %}GNOME Mango: {% trans "Update user:" %} {{ user.username }}{% endblock %}
 {% block breadcrumb %}{{ block.super }} &raquo; {{ user }}{% endblock %}
 {% block content %}
 {{ block.super }}
 <div style="width: 45%; margin: auto; border: 1px solid black; padding: 20px;">
-<form name="update_user_form" action="/users/jschroeder" method="post">
-{{ form.as_p }}
-<input type="submit">
+<form name="update_user_form" action="/users/jschroeder" method="post" class="uniForm">
+{% with form.helper as helper %}
+    {% uni_form form helper %}
+{% endwith %}
 </form>
 </div>
 {% endblock %}
