--- a/mango/mirrors/templates/mirrors/update.html
+++ b/mango/mirrors/templates/mirrors/update.html
@@ -1,10 +1,21 @@
 {% extends "mirrors/mirrors-base.html" %}
+{% load uni_form_tags %}
+{% block javascript %}
+{{ block.super }}
+<script src="{{ MEDIA_URL }}js/uni-form.jquery.js" type="text/javascript"></script>
+{% endblock %}
+{% block css %}
+{{ block.super }}
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/uni-form.css" type="text/css" />
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/default.uni-form.css" type="text/css" />
+{% endblock %}
 {% block breadcrumb %}{{ block.super }} &raquo; {{ mirror.name }}{% endblock %}
 {% block content %}
 {{ block.super }}
 <div style="width: 45%; margin: auto; border: 1px solid black; padding: 20px;">
-<form name="update_mirror" action="{{ mirror.get_absolute_url }}" method="post">
-{{ form.as_p }}
-<input type="submit" value="Save Changes">
+{# TODO: Figure out how to set the uni-form action #}
+{% with form.helper as helper %}
+    {% uni_form form helper %}
+{% endwith %}
 </div>
 {% endblock %}
