--- a/mango/static_media/css/style.css
+++ b/mango/static_media/css/style.css
@@ -22,12 +22,15 @@ body {
 }
 a {
     color: #204a87;
+		text-decoration: underline;
 }
 a:hover {
-    color: #3465a4;
+ color: #3465a4;
+ text-decoration: none;
 }
 a:visited {
-   color: #5d396e;
+ color: #5d396e;
+ text-decoration: none;
 }
 .left {
     float: left;
@@ -973,4 +976,8 @@ hr.bottom_shadow {
     left: 0;
     background: url(../images/video-play.png) center center no-repeat;
     margin: 4px;
+}
+
+.center {
+  text-align: center;
 }
