--- a/mango/mirrors/templates/mirrors/update.html
+++ b/mango/mirrors/templates/mirrors/update.html
@@ -1,4 +1,5 @@
 {% extends "mirrors/mirrors-base.html" %}
+{% load i18n %}
 {% load uni_form_tags %}
 {% block javascript %}
 {{ block.super }}
@@ -12,6 +13,7 @@
 {% block breadcrumb %}{{ block.super }} &raquo; {{ mirror.name }}{% endblock %}
 {% block content %}
 {{ block.super }}
+<div class="center"><h2>{% blocktrans with mirror.name as name %}Updating {{ name }}{% endblocktrans %}</h2></div>
 <div style="width: 45%; margin: auto; border: 1px solid black; padding: 20px;">
 {# TODO: Figure out how to set the uni-form action #}
 {% with form.helper as helper %}
