Adding a bunch of static media

--- a/mango/templates/header-snippet.html
+++ b/mango/templates/header-snippet.html
@@ -9,7 +9,7 @@
 <div id="header" class="container_12">
 
 <div id="logo" class="grid_3">
- <h1><a title="{% trans "Go to GNOME Project homepage" %}" href="http://www.gnome.org"><img src="http://www.gnome.org/wp-content/themes/gnome-grass/images/gnome-logo.png" alt="GNOME: {% trans "The Free Software Desktop Project" %}" /></a></h1>
+ <h1><a title="{% trans "Go to GNOME Project homepage" %}" href="http://www.gnome.org"><img src="{{ MEDIA_URL }}img/logo/gnome-logo.png" alt="GNOME: {% trans "The Free Software Desktop Project" %}" /></a></h1>
 </div>
 
 
