--- a/mango/static_media/css/style.css
+++ b/mango/static_media/css/style.css
@@ -981,3 +981,16 @@ hr.bottom_shadow {
 .center {
   text-align: center;
 }
+
+#outline {
+  width: 45%;
+	margin-left:auto;
+	margin-right:auto;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+  padding: 20px;
+	border-radius: 6px;
+	-moz-box-shadow: 0px 0px 10px #373737;
+	box-shadow: 0px 0px 10px #373737;
+	-webkit-box-shadow: 0px 0px 10px #373737;
+}
