--- a/mango/users/templates/users/update-user.html
+++ b/mango/users/templates/users/update-user.html
@@ -14,10 +14,10 @@
 {% block breadcrumb %}{{ block.super }} &raquo; {{ user }}{% endblock %}
 {% block content %}
 {{ block.super }}
-<div style="width: 45%; margin: auto; border: 1px solid black; padding: 20px;">
+<div id="outline">
 {# TODO: Figure out how to set the uni-form action #}
 {% with form.helper as helper %}
     {% uni_form form helper %}
 {% endwith %}
-</div>
+</div><br>
 {% endblock %}
