Minor update to mirrors/add.html to add a proper title
    - Also use the "outline" id for the pretty drop shadows

--- a/mango/mirrors/templates/mirrors/add.html
+++ b/mango/mirrors/templates/mirrors/add.html
@@ -10,11 +10,12 @@
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/uni-form.css" type="text/css" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/default.uni-form.css" type="text/css" />
 {% endblock %}
+{% block title %}GNOME Mango: {% trans "Add a New Mirror" %}{% endblock %}
 {% block breadcrumb %}{{ block.super }} &raquo; {% trans "Add New Mirror" %}{% endblock %}
 {% block content %}
 {{ block.super }}
-<div class="center"><h2>{% trans "Add a New GNOME Mirror" %}</h2></div>
-<div style="width: 45%; margin: auto; border: 1px solid black; padding: 20px;">
+<div class="center"><h2>{% trans "Add a New Mirror" %}</h2></div>
+<div id="outline">
 {# TODO: Figure out how to set the uni-form action #}
 {% with form.helper as helper %}
     {% uni_form form helper %}
