--- a/mango/static_media/css/style.css
+++ b/mango/static_media/css/style.css
@@ -6,7 +6,6 @@ Description: The original theme for the GNOME Project website.
 
 */
 
-
 @import url("reset.css");
 @import url("text.css");
 @import url("960.css");
@@ -212,8 +211,6 @@ a:visited {
 /* Container */
 /* ========================================================================== */
 
-
-
 #container {
     padding-top: 20px;
     color: #555;
@@ -307,8 +304,6 @@ dl.icon_list dt img {
 
 
 /* -> Action Button */
-
-
 .action_button {
     display: inline-block;
     padding: 0 14px;
@@ -341,228 +336,8 @@ dl.icon_list dt img {
     background-position: bottom;
 }
 
-/*
- * --> News list
- *
- * This is initially used in the home page for displaying the news
- *
- */
-
-.news_list {
-
-}
-.news_list .news {
-    margin-bottom: 20px;
-}
-.news_list .news .date {
-    font-family: 'Droid Serif', 'DejaVu Serif', Cambria, Georgia, serif;
-    color: #888a85;
-}
-.news_list .news a {
-    color: #555753;
-    display: block;
-    text-decoration: none;
-}
-.news_list .news a strong {
-    font-size: 18px;
-    color: #000;
-    line-height: 1.5;
-}
-.news_list .news a:hover strong {
-    text-decoration: underline;
-}
-
-
-
-/* Page Navigation */
-/* ========================================================================== */
-
-
-
-.page_navigation {
-    margin: 30px auto 0;
-}
-.page_navigation .prev, .page_navigation .next {
-    height: 32px;
-    line-height: 32px;
-}
-.page_navigation a {
-    text-decoration: none;
-    color: inherit;
-}
-.page_navigation a:hover {
-    text-decoration: underline;
-}
-.page_navigation .prev a {
-    float: left;
-    background: url(../images/go-previous.png) top left no-repeat;
-    padding-left: 40px;
-}
-.page_navigation .next a {
-    float: right;
-    background: url(../images/go-next.png) top right no-repeat;
-    padding-right: 40px;
-}
-
-
-
-/* Footer Artwork */
-/* ========================================================================== */
-
-
-
-#footer_art {
-    background: transparent no-repeat;
-    height: 180px;
-    margin-top: 0;
-    clear: left;
-}
-#footer_art.none {
-    height: 30px;
-    margin-top: 0;
-}
-#footer_art.default {
-    background-image: url(../images/footer_arts/default.png);
-}
-
-
-/* Footer Grass */
-/* ========================================================================== */
-
-#footer_grass {
-    background: url(../images/grass.png) top center repeat-x;
-    height: 39px;
-    margin-top: -33px;
-}
-
-
-/* Footer */
-/* ========================================================================== */
-
-
-
-#footer {
-    clear: left;
-    /*background: #d3d7cf url(../images/grass.png) top center repeat-x;*/
-    background: #d3d7cf;
-    color: #555753;
-    padding: 20px 0;
-}
-#footer div.links > div > ul > li {
-    float: left;
-    margin: 0 40px 10px 0;
-}
-#footer div.links div a, #footer div.links div strong {
-    display: block;
-    text-decoration: none;
-}
-#footer div.links div a:hover, #footer div.links div a:focus {
-    text-decoration: underline;
-}
-#footer div.language {
-    float: right;
-    text-align: right;
-}
-#footer div.language .map {
-    margin: 10px 0;
-    display: block;
-    opacity: 0.5;
-    -webkit-transition: opacity linear 200ms;
-    -moz-transition: opacity linear 200ms;
-    transition: opacity linear 200ms;
-}
-#footer div.language .map:hover {
-    opacity: 1;
-}
-#footer ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-#footer ul li {
-    margin: 0;
-    padding: 0;
-}
-#footer ul.menu > li > a {
-    font-weight: bold;
-}
-#footer .links a {
-    color: inherit;
-    -webkit-transition: background-color 100ms ease-in;
-    -moz-transition: background-color 100ms ease-in;
-    transition: background-color 100ms ease-in;
-}
-#footer .links a:focus {
-   background: #ececec;
-   padding: 1px 3px;
-   margin: -1px -3px;
-   text-decoration: none !important;
-   outline: 0;
-   -moz-border-radius: 5px;
-   -webkit-border-radius: 5px;
-   border-radius: 5px;
-}
-#footer #footnotes {
-    margin-top: 20px;
-}
-#footer #footnotes small {
-    font-size: 80%;
-}
-
-
-/* Language Selector */
-/* ========================================================================== */
-
-
-#language_selector {
-    display: none;
-    /* poor wanda the fish */
-    background: #555753 url(../images/language-selector-bg.png) top center repeat-x;
-    clear: left;
-    overflow: hidden;
-}
-#language_selector .container_12 {
-    background: url(../images/language-selector-wanda-bg.png) 60px right no-repeat;
-    overflow: hidden;
-}
-#language_selector h3 {
-    color: #f57900;
-    margin: 60px 0 35px;
-}
-#language_selector ul {
-    list-style: none;
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-    margin: 10px 0 40px;
-    color: #fff;
-}
-#language_selector ul li {
-    margin: 0;
-    padding: 0;
-    margin: 0 0 7px;
-}
-#language_selector ul li.active {
-    font-weight: bold;
-}
-#language_selector ul a {
-    color: #fff;
-    text-decoration: none;
-}
-#language_selector ul a:hover {
-    text-decoration: underline;
-}
-#language_selector .help_us_translating {
-    color: #d3d7cf;
-    margin-top: 118px;
-}
-#language_selector .help_us_translating a {
-    color: #fff;
-}
-
 /* Separators */
 /* ========================================================================== */
-
 hr {
     border: 0 #ccc solid;
     border-top-width: 1px;
@@ -570,7 +345,6 @@ hr {
     height: 0;
     margin: 40px 0;
 }
-
 hr.top_shadow,
 hr.bottom_shadow {
     height: 25px;
@@ -583,105 +357,13 @@ hr.bottom_shadow {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
 }
-
-/* Crafted Content */
 /* ========================================================================== */
-
-.crafted_content {
-    margin: 40px 0 0;
-}
-.crafted_content img {
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-}
-
-.crafted_content .section {
-    margin-bottom: 40px;
-    overflow: hidden;
-}
-.crafted_content .section h2,
-.crafted_content .section h3 {
-    color: #2e3436;
-    margin-top: 0;
-}
-.crafted_content .section.image-right .text {
-    float: left;
-    width: 480px;
-}
-.crafted_content .section.image-left .text {
-    float: right;
-    width: 480px;
-}
-.crafted_content .section .image {
-    display: block;
-    width: 420px;
-}
-.crafted_content .section .image img {
-    width: 420px;
-    background: #ccc;
-    display: block;
-}
-.crafted_content .section.image-right .image {
-    margin-left: 40px;
-    float: right;
-}
-.crafted_content .section.image-left .image {
-    margin-right: 40px;
-    float: left;
-}
-.crafted_content .section .thumbs {
-    display: table;
-    padding: 20px 0 0 0;
-    margin: 0;
-    list-style: none;
-}
-.crafted_content .section .thumbs li {
-    display: table-cell;
-    padding: 0 20px 0 0;
-    margin: 0;
-    list-style: none;
-    vertical-align: middle;
-}
-.crafted_content .section .thumbs li:last-child {
-    padding-right: 0;
-}
-.crafted_content .section .thumbs li > a {
-    display: block;
-    padding: 4px;
-    border: 1px solid #ccc;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    position: relative;
-}
-.crafted_content .section .thumbs li .inline a {
-    color: inherit;
-    text-decoration: none;
-}
-.crafted_content .section .thumbs li .inline a:hover {
-    text-decoration: underline;
-}
-.crafted_content .section .thumbs img {
-    width: 120px;
-    height: 80px;
-    display: block;
-    background: #ccc;
-}
-.crafted_content .section .thumbs a .play {
-    position: absolute;
-    width: 120px;
-    height: 80px;
-    top: 0;
-    left: 0;
-    background: url(../images/video-play.png) center center no-repeat;
-    margin: 4px;
-}
 
 .center {
   text-align: center;
 }
 
+/***** Pretty drop shadow outline for update pages *****/
 #outline {
   width: 45%;
 	margin-left:auto;
