--- a/mango/mirrors/templates/mirrors/index.html
+++ b/mango/mirrors/templates/mirrors/index.html
@@ -20,7 +20,7 @@ dataTable.fnSort( [ [3,'desc'] ] );
   {% for mirror in mirrors %}
   <tr{% if not mirror.is_active %} class="gradeX" title="{{ mirror.name }} {% trans "is inactive" %} " }}"{% endif %}>
    <td class="center"><a href="{{ mirror.get_absolute_url }}">{{ mirror.name }}</a></td>
-   <td><a href="{{ mirror.url }}">{{ mirror.url }}</a></td>
+   <td><a href="{{ mirror.url }}" target="_NEW">{{ mirror.url }}</a></td>
    <td>{{ mirror.location }}</td>
    <td>{{ mirror.is_active }}</td>
   </tr>
