--- a/mango/users/templates/users/index.html
+++ b/mango/users/templates/users/index.html
@@ -1,5 +1,6 @@
 {% extends "table-base.html" %}
 {% load i18n %}
+{% block title %}GNOME Mango: {% trans "All Users" %}{% endblock %}
 {% block breadcrumb %}{% include "users/breadcrumb_snippet.html" %}{% endblock %}
 {% block thead %}
  <th>{% trans "Username" %}</th>
