Make the javascript for "Add new mirror" a bit more specific

--- a/mango/mirrors/templates/mirrors/index.html
+++ b/mango/mirrors/templates/mirrors/index.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 {% block document_ready_extra %}
 {{ block.super }}
+$('.dataTables_length').after('<div id="add-record"><a href="{% url mirrors-add %}">{% trans "Add New Mirror" %}</a></div>');
+
 // Hide the "Active" column and sort on it
 dataTable.fnSetColumnVis(3, false );
 dataTable.fnSort( [ [3,'desc'] ] );
